--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "next": "13.4.19",
+    "pixi-filters": "^5.2.1",
     "pixi.js": "^7.2.4",
     "postcss": "8.4.29",
     "react": "18.2.0",
