--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@pixi/filter-glow": "^5.2.1",
     "@pixi/react": "^7.1.1",
     "@types/node": "20.6.1",
     "@types/react": "18.2.21",
